--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   http: 0.13.3
   flutter_bloc: 7.2.0
   dio: 4.0.0
+  cached_network_image: 3.1.0
+  infinite_scroll_pagination: 3.1.0
   flutter: 
     sdk: flutter
 
